# aahaa

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Pipfile  README.md  api.py  cli.py  main.py  package.json  pyproject.toml  run.ps1
hero_fetching/: __init__.py  fetch_hero_data.py
heroes/: heroData.json  index.js  package.json
image-recognition/: Pipfile  debug_utils.py  hero_recognition.py  image_preprocessing.py  main.py
image_recognition/: __init__.py  ascension_detection.py  base_image.py  color_tools.py  config.py  debug_utils.py  enums.py  filters.py  hero.py  hero_recognition.py  logger.py  main.py  modes.py  utils.py
image_recognition/tools/: ascension_detection.py  consts.py  debug_utils.py  hero_recognition.py  image_processing.py
resources/: heroData.json
scripts/: fetchHeroData.js
