[tool.poetry]
name = "afk-arena-detect"
version = "0.1.0"
description = ""
authors = ["Pawel Dabrowski <dabrowskip9@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.2"
opencv-python = "^4.2.0"
pytesseract = "^0.3.3"
scikit-image = "^0.16.2"
fastapi = "^0.54.1"
uvicorn = "^0.11.3"
requests = "^2.23.0"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pyflakes = "^2.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
